<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.Shop"
    android:background="#F0EBE4">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="63dp"
            android:layout_height="123dp"
            android:contentDescription="@string/pattern"
            android:src="@drawable/smth1" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_serif_pro_semibold"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/shop_title" />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/line"
                android:src="@drawable/line_11" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="123dp"
            android:layout_gravity="end"
            android:contentDescription="@string/pattern"
            android:src="@drawable/smth11" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/mascot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/mascot"
            android:src="@drawable/cat_shop_1_" />

        <ImageView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:src="@drawable/bubble111"
            android:contentDescription="@string/bubble"
            android:layout_marginStart="160dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/balanceText"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="185dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/source_serif_pro_semibold"
            android:text="@string/money"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:src="@drawable/line_6"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/line" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/panel"
        android:layout_below="@id/mascot">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="330dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/recycler"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/panel"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D7D7D7"
            android:contentDescription="@string/panel"
            app:srcCompat="@drawable/bottom_panel" />

        <ImageView
            android:id="@+id/shop_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/shop"
            app:srcCompat="@drawable/shop1" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/grey_main"
            android:contentDescription="@string/home_button" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/achievements"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/profile"
            android:contentDescription="@string/achievements_button" />
    </FrameLayout>


</RelativeLayout>