<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE9E2"
    android:orientation="vertical"
    tools:context=".add_hobby">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEE9E2"
        android:backgroundTint="#EEE9E2"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:backgroundTint="#ECE7E0"
                android:onClick="goToMainScreen"
                android:contentDescription="@string/back_button"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/source_serif_pro_semibold"
                android:text="@string/new_hobby"
                android:textSize="36sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="64dp"
                app:srcCompat="@drawable/smth"
                android:contentDescription="@string/pattern"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="165dp"
                android:contentDescription="@string/line"
                app:srcCompat="@drawable/bar" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/source_serif_pro_semibold"
                android:text="@string/input_hobby"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ourHobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:backgroundTint="#DEB3A3"
                android:fontFamily="@font/source_serif_pro"
                android:hint="@string/hint_new_hobby"
                android:autofillHints=""
                android:inputType="text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/source_serif_pro_semibold"
                android:text="@string/choose_new_ico"
                android:textSize="24sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cactus"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginStart="16dp">
                    <ImageView
                        android:id="@+id/ico1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/ico"
                        app:srcCompat="@drawable/cactus_ico"/>

                    <ImageView
                        android:id="@+id/ico1_red"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/select_icon_frame"
                        android:contentDescription="@string/ico_red"
                        android:visibility="gone"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/crocheting"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginStart="16dp">
                    <ImageView
                        android:id="@+id/ico2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/ico"
                        app:srcCompat="@drawable/roll_ico"/>
                    <ImageView
                        android:id="@+id/ico2_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/crocheting_red"
                        android:contentDescription="@string/ico_red"
                        android:visibility="gone"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/drawing"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_marginStart="16dp">
                    <ImageView
                        android:id="@+id/ico3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/ico"
                        app:srcCompat="@drawable/draw_ico"/>
                    <ImageView
                        android:id="@+id/ico3_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/drawing_red"
                        android:contentDescription="@string/ico_red"
                        android:visibility="gone"/>

                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guitar"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_marginStart="16dp">
                    <ImageView
                        android:id="@+id/ico4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/ico"
                        app:srcCompat="@drawable/guitar_ico"/>
                    <ImageView
                        android:id="@+id/ico4_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/guitar_red"
                        android:contentDescription="@string/ico_red"
                        android:visibility="gone"/>

                </FrameLayout>
            </GridLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="#ECE7E0"
                android:contentDescription="@string/submit_button"
                android:src="@drawable/create_hobby_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:fontFamily="@font/source_serif_pro_semibold"
                android:text="@string/create_hobby"
                android:textSize="24sp" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#D7D7D7">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/panel"
            app:srcCompat="@drawable/bottom_panel" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/shop"
            app:srcCompat="@drawable/shop" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/home_button"
            android:onClick="goToMainScreen"
            app:srcCompat="@drawable/grey_main" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logrosBut"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/achievements_button"
            app:srcCompat="@drawable/profile" />
    </FrameLayout>

</RelativeLayout>
